# salieri

./: .gitignore  Cargo.toml  Dockerfile  Procfile  README.md  docker-compose.yml  rust-toolchain
docs/: backgammon.md  checkers.md  chess.md  go.md  shogi.md  xiangqi.md
scripts/: integration_test.sh  tag_version.sh
src/: backgammon_controller.rs  checkers_controller.rs  chess_controller.rs  go_controller.rs  main.rs  shogi_controller.rs  xiangqi_controller.rs
src/backgammon/: mod.rs
src/backgammon/mcts/: mod.rs  node.rs
src/backgammon/minimax/: mod.rs
src/backgammon/openings/: mod.rs
src/backgammon/state/: bar.rs  dice_set.rs  die.rs  game_state.rs  mod.rs  mov.rs  off_board.rs  piece.rs  point.rs  point_set.rs
src/checkers/: game_state.rs  mod.rs  piece.rs  point.rs  square.rs  square_set.rs  vector.rs
src/checkers/mcts/: mod.rs  node.rs
src/checkers/minimax/: mod.rs
src/checkers/openings/: mod.rs
src/checkers/state/: game_state.rs  mod.rs  mov.rs  piece.rs  point.rs  square.rs  square_set.rs  vector.rs
src/chess/: mod.rs
src/chess/mcts/: mod.rs  node.rs
src/chess/minimax/: mod.rs
src/chess/openings/: mod.rs
src/chess/state/: castle_move.rs  external_mov.rs  game_state.rs  mod.rs  mov.rs  piece.rs  piece_factory.rs  point.rs  square.rs  square_set.rs  vector.rs
src/go/: mod.rs
src/go/mcts/: mod.rs  node.rs
src/go/minimax/: mod.rs
src/go/openings/: mod.rs
src/go/state/: game_state.rs  mod.rs  mov.rs  player_stat.rs  point.rs  point_set.rs  stone.rs  vector.rs
src/minimax/: mod.rs
src/shogi/: mod.rs
src/xiangqi/: mod.rs
(+24 files in other folders)
