[package]
name = "salieri"
version = "0.4.0"
authors = ["Mark Humphreys <mark@mrlhumphreys.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "salieri"
path = "src/main.rs"

[dependencies]
actix-web = "4.11.0"
actix-rt = "2.11.0"
actix-cors = "0.7.1"
rand = "0.9.2"
bytes = "1.10.1"
regex = "1.11.2"

